--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,11 +15,16 @@ jobs:
       fail-fast: false
       max-parallel: 15
       matrix:
-        php-versions: ['7.4', '8.0']
-        laravel-versions: [^7.0, ^8.0]
+        php-versions: ['7.4', '8.0', '8.1']
+        laravel-versions: [^7.0, ^8.0, ^9.0]
         include:
           - php-versions: 7.4
             dependency-version: "--prefer-lowest --prefer-stable"
+        exclude:
+          - php-versions: 8.1
+            laravel-versions: ^7.0
+          - php-versions: 7.4
+            laravel-versions: ^9.0
     steps:
       - name: Checkout
         uses: actions/checkout@v2
