--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
     "require": {
         "php": ">=7.4",
         "friendsofphp/php-cs-fixer": "^3.2.0",
-        "illuminate/support": "^7.0|^8.0"
+        "illuminate/support": "^7.0|^8.0|^9.0"
     },
     "require-dev": {
         "brick/varexporter": "^0.3.2",
-        "laravel/framework": "^7.0|^8.0",
-        "orchestra/testbench": "^5.0|^6.0",
-        "phpunit/phpunit": "^7.0|^8.0",
+        "laravel/framework": "^7.0|^8.0|^9.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0",
+        "phpunit/phpunit": "^7.0|^8.0|^9.5.10",
         "styleci/sdk": "^1.3"
     },
     "extra": {
