--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     },
     "require": {
-        "php": ">=7.4",
+        "php": "^7.4|^8.0",
         "friendsofphp/php-cs-fixer": "^3.2.0",
         "illuminate/support": "^7.0|^8.0|^9.0"
     },
