--- a/composer.json
+++ b/composer.json
@@ -28,19 +28,16 @@
     "require": {
         "php": "^7.4|^8.0",
         "friendsofphp/php-cs-fixer": "^3.2.0",
-        "illuminate/support": "^7.0|^8.0|^9.0"
+        "illuminate/support": "^8.0|^9.0"
     },
     "require-dev": {
         "brick/varexporter": "^0.3.2",
-        "laravel/framework": "^7.0|^8.0|^9.0",
-        "orchestra/testbench": "^5.0|^6.0|^7.0",
-        "phpunit/phpunit": "^7.0|^8.0|^9.5.10",
+        "laravel/framework": "^8.64.0|^9.0",
+        "orchestra/testbench": "^6.0|^7.0",
+        "phpunit/phpunit": "^9.5.10",
         "styleci/sdk": "^1.3"
     },
     "extra": {
-        "branch-alias": {
-            "dev-main": "1.0-dev"
-        },
         "laravel": {
             "providers": [
                 "Jubeki\\LaravelCodeStyle\\ServiceProvider"
