--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,13 +16,13 @@ jobs:
       max-parallel: 15
       matrix:
         php-version: ['7.4', '8.0', '8.1']
-        laravel-versions: [^8.64, ^9.0]
+        laravel-version: [^8.64, ^9.0]
         dependency-version: ['--prefer-lowest', '--prefer-stable']
         exclude:
           - php-version: 7.4
-            laravel-versions: ^9.0
+            laravel-version: ^9.0
           - dependency-version: '--prefer-lowest'
-            laravel-versions: ^9.0
+            laravel-version: ^9.0
     steps:
       - name: Checkout
         uses: actions/checkout@v2
