--- a/.gitattributes
+++ b/.gitattributes
@@ -6,9 +6,12 @@
 /.editorconfig               export-ignore
 /.gitattributes              export-ignore
 /.gitignore                  export-ignore
-/.travis.yml                 export-ignore
 /.github                     export-ignore
 /.php-cs-fixer.dist.php      export-ignore
+/.php-cs-fixer.cache         export-ignore
 /phpunit.xml.dist            export-ignore
 /examples                    export-ignore
 /tests                       export-ignore
+/bin                         export-ignore
+/vendor                      export-ignore
+/composer.lock               export-ignore
