--- a/.github/workflows/check-rules.yml
+++ b/.github/workflows/check-rules.yml
@@ -32,7 +32,7 @@ jobs:
           composer require --dev laravel/framework:^9.0 --no-update
 
       - name: Install dependencies
-        run: composer update --prefer-latest --prefer-dist --no-interaction --no-progress
+        run: composer update --prefer-stable --prefer-dist --no-interaction --no-progress
 
       - name: Fetch new rules from StyleCI
         run: bin/gen-rules
