--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,16 +13,10 @@ jobs:
     timeout-minutes: 20
     strategy:
       fail-fast: false
-      max-parallel: 15
       matrix:
-        php-version: ['7.4', '8.0', '8.1']
-        laravel-version: [^8.64, ^9.0]
+        php-version: ['8.0', '8.1']
+        laravel-version: [^9.0]
         dependency-version: ['prefer-lowest', 'prefer-stable']
-        exclude:
-          - php-version: 7.4
-            laravel-version: ^9.0
-          - dependency-version: 'prefer-lowest'
-            laravel-version: ^9.0
     steps:
       - name: Checkout
         uses: actions/checkout@v2
