--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,14 @@
         }
     },
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "friendsofphp/php-cs-fixer": "^3.11",
-        "illuminate/support": "^8.0|^9.0"
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
         "brick/varexporter": "^0.3.2",
-        "laravel/framework": "^8.64|^9.0",
-        "orchestra/testbench": "^6.24|^7.0",
+        "laravel/framework": "^9.0",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.5.10",
         "styleci/sdk": "^1.3"
     },
