--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['8.0', '8.1']
+        php-version: ['8.0', '8.1', '8.2']
         laravel-version: [^9.30]
-        dependency-version: ['prefer-lowest', 'prefer-stable']
+        dependency-version: ['prefer-stable']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
