--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,8 +15,11 @@ jobs:
       fail-fast: false
       matrix:
         php-version: ['8.0', '8.1', '8.2']
-        laravel-version: [^9.34]
+        laravel-version: [^9.34, ^10.0]
         dependency-version: ['prefer-stable']
+        exclude:
+          - php-version: '8.0'
+            laravel-version: ^10.0
     steps:
       - name: Checkout
         uses: actions/checkout@v3
