--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     "keywords": [
         "laravel",
         "code-style",
-        "php-cs-fixer",
-        "psr-2"
+        "php-cs-fixer"
     ],
     "autoload": {
         "psr-4": {
@@ -27,15 +26,13 @@
     },
     "require": {
         "php": "^8.0",
-        "friendsofphp/php-cs-fixer": "^3.11",
-        "illuminate/support": "^9.30 || ^10"
+        "friendsofphp/php-cs-fixer": "^3.14.4",
+        "illuminate/support": "^9.30 || ^10.0"
     },
     "require-dev": {
-        "brick/varexporter": "^0.3.2",
         "laravel/framework": "^9.30 || ^10.0",
         "orchestra/testbench": "^7.0 || ^8.0",
-        "phpunit/phpunit": "^9.5.10",
-        "styleci/sdk": "^1.3"
+        "phpunit/phpunit": "^9.5.10"
     },
     "extra": {
         "laravel": {
@@ -45,10 +42,13 @@
         }
     },
     "scripts": {
-        "test": "phpunit",
+        "test": [
+            "rm -rf laravel",
+            "git clone https://github.com/laravel/laravel.git --single-branch --depth 1",
+            "phpunit"
+        ],
         "check-style": "php-cs-fixer fix --dry-run --diff",
-        "fix-style": "php-cs-fixer fix",
-        "gen-rules": "./bin/gen-rules"
+        "fix-style": "php-cs-fixer fix"
     },
     "config": {
         "sort-packages": true
