Update Workflow versions

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
           php-version: ${{ matrix.php-version }}
 
       - name: Cache dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.composer/cache/files
           key: php-${{ matrix.php-version }}-composer-${{ hashFiles('composer.json') }}
@@ -40,14 +40,13 @@ jobs:
         run: composer validate
 
       - name: Update composer.json
-        run: |
-          composer require illuminate/support:${{ matrix.laravel-version }} --no-update
+        run: composer require illuminate/support:${{ matrix.laravel-version }} --no-update
 
       - name: Install dependencies
         run: composer update --prefer-stable --prefer-dist --no-interaction --no-progress
 
       - name: Check for style violations
-        run: PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix --dry-run --diff
+        run: vendor/bin/php-cs-fixer fix --dry-run --diff
 
       - name: Clone the laravel skeleton
         run: git clone https://github.com/laravel/laravel.git --single-branch --depth 1
