--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,11 +16,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['8.0', '8.1', '8.2']
+        php-version: ['8.0', '8.1', '8.2', '8.3']
         laravel-version: [^9.34, ^10.0]
         exclude:
           - php-version: '8.0'
             laravel-version: ^10.0
+          - php-version: '8.3'
+            laravel-version: ^9.34
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -46,7 +48,7 @@ jobs:
         run: composer update --prefer-stable --prefer-dist --no-interaction --no-progress
 
       - name: Check for style violations
-        run: vendor/bin/php-cs-fixer fix --dry-run --diff
+        run: PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix --dry-run --diff
 
       - name: Clone the laravel skeleton
         run: git clone https://github.com/laravel/laravel.git --single-branch --depth 1
