--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,13 @@
     },
     "require": {
         "php": "^8.0",
-        "friendsofphp/php-cs-fixer": "^3.21",
+        "friendsofphp/php-cs-fixer": "^3.34.1",
         "illuminate/support": "^9.30 || ^10.0"
     },
     "require-dev": {
         "laravel/framework": "^9.30 || ^10.0",
         "orchestra/testbench": "^7.0 || ^8.0",
-        "phpunit/phpunit": "^9.5.10"
+        "phpunit/phpunit": "^9.5.10 || ^10.4.1"
     },
     "extra": {
         "laravel": {
