--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,12 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         php-version: ['8.0', '8.1', '8.2', '8.3']
-        laravel-version: [^9.34, ^10.0]
-        exclude:
-          - php-version: '8.0'
-            laravel-version: ^10.0
-          - php-version: '8.3'
-            laravel-version: ^9.34
+        laravel-version: [^10.0]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
