--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,10 @@ jobs:
       fail-fast: false
       matrix:
         php-version: ['8.1', '8.2', '8.3']
-        laravel-version: [^10.0]
+        laravel-version: [^10.0, ^11.0]
+        exclude:
+          - php-version: 8.1
+            laravel-version: ^11.0
     steps:
       - name: Checkout
         uses: actions/checkout@v4
