--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
     "require": {
         "php": "^8.0",
         "friendsofphp/php-cs-fixer": "^3.34.1",
-        "illuminate/support": "^9.34 || ^10.0"
+        "illuminate/support": "^9.34 || ^10.0 || ^11.0"
     },
     "require-dev": {
         "laravel/framework": "^10.0",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.0 || ^9.0",
         "phpunit/phpunit": "^10.4.1"
     },
     "extra": {
