--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
         run: composer validate
 
       - name: Update composer.json
-        run: composer require illuminate/support:${{ matrix.laravel-version }} --no-update
+        run: composer require laravel/framework:${{ matrix.laravel-version }} --no-update --dev
 
       - name: Install dependencies
         run: composer update --prefer-stable --prefer-dist --no-interaction --no-progress
