--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,11 +16,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-version: ['8.1', '8.2', '8.3']
+        php-version: ['8.1', '8.2', '8.3', '8.4']
         laravel-version: [^10.0, ^11.0]
         exclude:
-          - php-version: 8.1
+          - php-version: '8.1'
             laravel-version: ^11.0
+        exclude:
+          - php-version: '8.4'
+            laravel-version: ^10.0
     steps:
       - name: Checkout
         uses: actions/checkout@v4
